--- a/accountant_home_paid.html
+++ b/accountant_home_paid.html
@@ -18,27 +18,38 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Phần mềm quản lý thu mua chè | Admin</title>
+		<title>Phần mềm quản lý thu mua chè | Kế toán</title>
 	</head>
 	<body>
 		<!-- nav-sidebar -->
-		<section id="home-page-admin" class="home-page">
+		<section id="loan-control" class="home-page">
 			<aside class="left-content">
-				<nav class="navbar bg-navbar ">
+				<nav class="navbar bg-navbar">
 					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link current" href="#">Danh sách khách hàng</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="list_type_tea.html">Danh sách loại chè</a>
+						<li class="dropdown">
+							<a class="dropdown-toggle current" data-toggle="dropdown">
+								Danh sách giao dịch
+							</a>
+							<div class="dropdown-menu bg-navbar">
+								<a class="dropdown-item current" href="accountant_home.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="accountant_home_paid.html"
+									>Đã thanh toán</a
+								>
+							</div>
 						</li>
 						<li class="dropdown nav-link">
 							<a type="button" class="dropdown-toggle" data-toggle="dropdown"
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Chưa thanh toán</a>
-								<a class="dropdown-item" href="#">Đã thanh toán</a>
+								<a class="dropdown-item" href="accountant_home.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="accountant_home_paid.html"
+									>Đã thanh toán</a
+								>
 							</div>
 						</li>
 						<li class="dropdown">
@@ -55,46 +66,32 @@
 					</ul>
 				</nav>
 			</aside>
-			<main class="right-content list-details-order-customer">
+			<main class="right-content list-customer-content">
 				<!-- user info section -->
 				<div class="user-wrap">
 					<div class="user-info">
 						<a type="button" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fas fa-user-shield"></i> Admin</a
+							<i class="fas fa-user"></i> Minh Ngọc</a
 						>
 						<div class="dropdown-menu">
 							<div>
 								<i class="fas fa-phone-alt"></i>
-								<span class="admin-phone-number"> 0946284647</span>
+								<span class="accountant-phone-number"> 0946284647</span>
 							</div>
 							<div class="py-1">
-								Quản trị viên
+								Kế toán viên
 							</div>
 							<a href="signin.html">Đăng xuất</a>
 						</div>
 					</div>
 				</div>
 				<div class="container mt-5">
-					
-					<div class="list-customer-order-details mt-4 d-flex">
-						<h3>
-							<span class="customer-name">Danh sách đơn - Nông hộ A </span>-
-							<span class="customer-address"> Thôn A</span>
-						</h3>
-
-						<div class="form-group">
-							<label for="">Tìm kiếm</label>
-							<input
-								type="date"
-								class="search-box search-box-list-order"
-								name=""
-								id=""
-								placeholder="Tìm kiếm theo ngày"
-							/>
-						</div>
-					</div>
-					<!-- list order table -->
-					<div class="list-order-table mt-3">
+					<h3 class="table-header py-2">
+						Danh sách đơn hàng đã thanh toán
+						<span class="date-payment">12/4/2020</span>
+					</h3>
+					<!-- table info section -->
+					<div class="customer-table pt-3">
 						<table class="table text-center">
 							<thead class="thead-light">
 								<tr>
@@ -102,16 +99,19 @@
 										Mã đơn
 									</th>
 									<th>
-										Ngày giao dịch
+										Nông hộ
 									</th>
 									<th>
-										Khối lượng
+										Địa chỉ
 									</th>
 									<th>
-										Thành tiền
+										Tổng khối lượng
 									</th>
 									<th>
-										Còn nợ
+										Tổng khấu trừ
+									</th>
+									<th>
+										Đơn giá
 									</th>
 									<th>
 										Chi tiết
@@ -121,77 +121,74 @@
 							<tbody>
 								<tr>
 									<td>
-										#f475834
+										#f448457
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td>Nguyễn Mạnh Hùng</td>
+									<td>Thôn A</td>
+									<td>4000 <span class="mass-digit">kg</span></td>
+									<td>20kg</td>
+									<td>150.000đ</td>
+									<td><a href="order_payment.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										#f448457
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td>Nguyễn Văn B</td>
+									<td>Thôn B</td>
+									<td>2000 <span class="mass-digit">kg</span></td>
+									<td>20kg</td>
+									<td>150.000đ</td>
+									<td><a href="#">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										#f448457
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td>Nguyễn Văn B</td>
+									<td>Thôn B</td>
+									<td>2000 <span class="mass-digit">kg</span></td>
+									<td>20kg</td>
+									<td>150.000đ</td>
+									<td><a href="#">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										#f448457
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td>Nguyễn Văn C</td>
+									<td>Thôn C</td>
+									<td>2000 <span class="mass-digit">kg</span></td>
+									<td>20kg</td>
+									<td>150.000đ</td>
+									<td><a href="#">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										#f448457
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										#f753363
-									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+									<td>Nguyễn Văn E</td>
+									<td>Thôn E</td>
+									<td>2000 <span class="mass-digit">kg</span></td>
+									<td>20kg</td>
+									<td>150.000đ</td>
+									<td><a href="#">View</a></td>
 								</tr>
 							</tbody>
 							<tfoot class="tfoot-light">
 								<tr>
 									<td class="font-weight-bold">Tổng</td>
 									<td>-</td>
-									<td>500kg</td>
-									<td>120.000.000đ</td>
-									<td class="text-danger">60.000.000đ</td>
+									<td>-</td>
+									<td>12.000kg</td>
+									<td>120kg</td>
+									<td>-</td>
 									<td>-</td>
 								</tr>
 							</tfoot>
 						</table>
 					</div>
+					<!-- add new customer section -->
 				</div>
 			</main>
 		</section>
