--- a/create_order.html
+++ b/create_order.html
@@ -18,18 +18,35 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Tạo mới đơn</title>
+		<title>Tạo mới đơn | Nhân viên thu mua</title>
 	</head>
 	<body>
-		<section id="create-new-order" class="order">
-			<div class="container pt-4">
+		<section id="create-new-order" class="order home-page">
+			<aside class="left-content">
+				<nav class="navbar bg-navbar ">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="list_order_customer.html">Danh sách khách hàng</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link current" href="save_list_order.html"
+								>Danh sách đơn đã lưu</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="submited_list_order.html">Danh sách đơn đã gửi</a>
+						</li>
+					</ul>
+				</nav>
+			</aside>
+			<main class="p-4 right-content">
 				<!-- order header -->
 				<div class="order-header d-flex justify-content-between">
 					<div class="order-header-left">
 						<p class="btn btn-danger">
 							Mã đơn số : <span class="order-code">#f847574</span>
 						</p>
-						<div class="order-date pb-2">Ngày : <input type="date" /></div>
+						<div class="order-date">Ngày : <input type="date" /></div>
 						<div class="add-new-tea mt-2">
 							<button
 								class="btn btn-primary"
@@ -145,7 +162,7 @@
 				<!-- order body -->
 				<div class="create-order-body mt-3 bg-light">
 					<table class="table text-center">
-						<thead>
+						<thead class="thead-light">
 							<tr>
 								<th>
 									Tên loại chè
@@ -220,17 +237,17 @@
 				</div>
 				<!-- order footer -->
 				<div class="order-footer">
-					<a class="btn btn-light submit-btn" href="index.html">
+					<a class="btn btn-success submit-btn" href="index.html">
 						Submit
 					</a>
-					<a class="btn btn-light save-btn mx-2" href="index.html">
+					<a class="btn btn-success save-btn mx-2" href="index.html">
 						Lưu
 					</a>
-					<a class="btn btn-light cancel-btn" href="index.html">
+					<a class="btn btn-danger cancel-btn" href="index.html">
 						Hủy
 					</a>
 				</div>
-			</div>
+			</main>
 		</section>
 		<!-- JS  Bootsrap -->
 		<script src="./js/test1.js"></script>
