--- a/change_order.html
+++ b/change_order.html
@@ -18,226 +18,226 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Tạo mới đơn</title>
+		<title>Chỉnh sửa đơn | Nhân viên thu mua</title>
 	</head>
 	<body>
-		<section id="change-order" class="order">
-			<div class="container pt-4">
-				<!-- order header -->
-				<div class="order-header d-flex justify-content-between">
-					<div class="order-header-left">
-						<p class="btn btn-danger">
-							Mã đơn số : <span class="order-code">#f847574</span>
-						</p>
-						<div class="order-date pb-1">
-							Ngày : <span class="date-order">12/2/2020</span>
-						</div>
-						<div class="add-new-tea mt-2">
-							<button
-								class="btn btn-primary"
-								data-toggle="modal"
-								data-target="#add-tea"
-								type="button"
+		<section id="change-order" class="order home-page">
+			<aside class="left-content">
+				<nav class="navbar bg-navbar ">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="list_order_customer.html">Danh sách khách hàng</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link current" href="save_list_order.html"
+								>Danh sách đơn đã lưu</a
 							>
-								Thêm <i class="fas fa-plus"></i>
-							</button>
-							<div class="modal text-dark" id="add-tea">
-								<div class="modal-dialoge">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h4 class="modal-title">Tạo mới giao dịch</h4>
-											<button type="button" data-dismiss="modal">
-												&times;
-											</button>
-										</div>
-										<div class="modal-body">
-											<form action="">
-												<div class="form-group">
-													<label for="tea-type">Loại chè</label>
-													<select class="form-control" id="tea-type" name="">
-														<option>Chè búp loại 1</option>
-														<option>Chè xanh loại 2</option>
-														<option>Chè xanh loại 3</option>
-														<option>Chè khô loại 3</option>
-													</select>
-												</div>
-												<div class="form-group">
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="submited_list_order.html">Danh sách đơn đã gửi</a>
+						</li>
+					</ul>
+				</nav>
+			</aside>
+			<main class="right-content">
+				<div class="container pt-4">
+					<!-- order header -->
+					<div class="order-header d-flex justify-content-between">
+						<div class="order-header-left">
+							<p class="btn btn-danger">
+								Mã đơn số : <span class="order-code">#f847574</span>
+							</p>
+							<div class="order-date pb-1">
+								Ngày : <span class="date-order">12/2/2020</span>
+							</div>
+							<div class="add-new-tea mt-2">
+								<button
+									class="btn btn-primary"
+									data-toggle="modal"
+									data-target="#add-tea"
+									type="button"
+								>
+									Thêm <i class="fas fa-plus"></i>
+								</button>
+								<div class="modal text-dark" id="add-tea">
+									<div class="modal-dialoge">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h4 class="modal-title">Tạo mới giao dịch</h4>
+												<button type="button" data-dismiss="modal">
+													&times;
+												</button>
+											</div>
+											<div class="modal-body">
+												<form action="">
+													<div class="form-group">
+														<label for="tea-type">Loại chè</label>
+														<select class="form-control" id="tea-type" name="">
+															<option>Chè búp loại 1</option>
+															<option>Chè xanh loại 2</option>
+															<option>Chè xanh loại 3</option>
+															<option>Chè khô loại 3</option>
+														</select>
+													</div>
+													<div class="form-group">
+														<input
+															type="text"
+															id="tea-mass"
+															class="form-control"
+															placeholder="Khối lượng"
+														/>
+													</div>
+													<div class="form-group">
+														<input
+															type="text"
+															id="tea-mass-rate"
+															class="form-control"
+															placeholder="Khấu trừ(kg)"
+														/>
+													</div>
+													<div class="form-group">
+														<label for="tea-price">Đơn giá</label>
+														<select class="form-control" id="tea-price" name="">
+															<option>100.000đ</option>
+															<option>200.000đ</option>
+															<option>300.000đ</option>
+															<option>400.000đ</option>
+														</select>
+													</div>
+													<div class="form-group">
+														<label for="tea-message">Ghi chú</label>
+														<textarea
+															name="message"
+															class="form-control"
+															id="tea-message"
+															cols="30"
+															rows="2"
+															placeholder="Ghi chú"
+														></textarea>
+													</div>
 													<input
-														type="text"
-														id="tea-mass"
-														class="form-control"
-														placeholder="Khối lượng"
+														type="submit"
+														class="btn btn-success d-block m-auto"
+														value="Xác nhận"
 													/>
-												</div>
-												<div class="form-group">
-													<input
-														type="text"
-														id="tea-mass-rate"
-														class="form-control"
-														placeholder="Khấu trừ(kg)"
-													/>
-												</div>
-												<div class="form-group">
-													<label for="tea-price">Đơn giá</label>
-													<select class="form-control" id="tea-price" name="">
-														<option>100.000đ</option>
-														<option>200.000đ</option>
-														<option>300.000đ</option>
-														<option>400.000đ</option>
-													</select>
-												</div>
-												<div class="form-group">
-													<label for="tea-message">Ghi chú</label>
-													<textarea
-														name="message"
-														class="form-control"
-														id="tea-message"
-														cols="30"
-														rows="2"
-														placeholder="Ghi chú"
-													></textarea>
-												</div>
-												<input
-													type="submit"
-													class="btn btn-success d-block m-auto"
-													value="Xác nhận"
-												/>
-											</form>
-										</div>
-										<div class="modal-footer">
-											<button
-												type="button"
-												class="btn btn-secondary"
-												data-dismiss="modal"
-											>
-												Đóng
-											</button>
+												</form>
+											</div>
+											<div class="modal-footer">
+												<button
+													type="button"
+													class="btn btn-secondary"
+													data-dismiss="modal"
+												>
+													Đóng
+												</button>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<!-- info customer -->
-					<div class="order-header-right customer-info">
-						<div class="customer-name">Tên nông hộ : Trần Đại Nghĩa</div>
-						<div class="customer-phone-number py-2">
-							Số điện thoại: 0726828733
-						</div>
-						<div class="customer-address">Địa chỉ : Thôn A - Yên Bái</div>
-					</div>
-				</div>
-				<!-- order body -->
-				<div class="create-order-body mt-3 bg-light">
-					<table class="table text-center">
-						<thead>
-							<tr>
-								<th>
-									Tên loại chè
-								</th>
-								<th>
-									Khối lượng
-								</th>
-								<th>
-									Khấu trừ(%)
-								</th>
-								<th>
-									Khấu trừ(kg)
-								</th>
-								<th>
-									Đơn giá
-								</th>
-								<th>
-									Ghi chú
-								</th>
-								<th>
-									Thành tiền
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>
-									Chè thái nguyên
-								</td>
-								<td>300kg</td>
-								<td>5%</td>
-								<td>10kg</td>
-								<td>300.000đ</td>
-								<td>Đất, nước, sỏi</td>
-								<td>20.000.000đ</td>
-							</tr>
-							<tr>
-								<td>
-									Chè búp 1
-								</td>
-								<td>300kg</td>
-								<td>5%</td>
-								<td>10kg</td>
-								<td>300.000đ</td>
-								<td>Đất, nước, sỏi</td>
-								<td>20.000.000đ</td>
-							</tr>
-							<tr>
-								<td>
-									Chè Lào Cai
-								</td>
-								<td>300kg</td>
-								<td>5%</td>
-								<td>10kg</td>
-								<td>300.000đ</td>
-								<td>Đất, nước, sỏi</td>
-								<td>20.000.000đ</td>
-							</tr>
-						</tbody>
-						<tfoot class="tfoot-light">
-							<tr>
-								<td class="font-weight-bold">Tổng</td>
-								<td>900kg</td>
-								<td>15%</td>
-								<td>30kg</td>
-								<td>-</td>
-								<td>Chè bẩn, đất nhiều</td>
-								<td>60.000.000đ</td>
-							</tr>
-						</tfoot>
-					</table>
-				</div>
-				<!-- order footer -->
-				<div class="order-footer">
-					<button
-						class="btn btn-light submit-btn"
-					>
-						Chỉnh sửa
-					</button>
-					<!-- <div class="modal" id="changeOrderModal">
-						<div class="modal-dialoge">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h4 class="modal-title text-danger">Xác nhận thay đổi</h4>
-									<button type="button" data-dismiss="modal">&times;</button>
-								</div>
-								<div class="modal-body"></div>
-								<div class="modal-footer">
-									<button
-										type="button"
-										class="btn btn-secondary"
-										data-dismiss="modal"
-									>
-										Đóng
-									</button>
-								</div>
+						<!-- info customer -->
+						<div class="order-header-right customer-info">
+							<div class="customer-name">Tên nông hộ : Trần Đại Nghĩa</div>
+							<div class="customer-phone-number py-2">
+								Số điện thoại: 0726828733
 							</div>
+							<div class="customer-address">Địa chỉ : Thôn A - Yên Bái</div>
 						</div>
-					</div> -->
-					<a class="btn btn-light save-btn mx-2" href="index.html">
-						Lưu
-					</a>
-					<a class="btn btn-light cancel-btn" href="index.html">
-						Hủy
-					</a>
+					</div>
+					<!-- order body -->
+					<div class="create-order-body mt-3 bg-light">
+						<table class="table text-center">
+							<thead>
+								<tr>
+									<th>
+										Tên loại chè
+									</th>
+									<th>
+										Khối lượng
+									</th>
+									<th>
+										Khấu trừ(%)
+									</th>
+									<th>
+										Khấu trừ(kg)
+									</th>
+									<th>
+										Đơn giá
+									</th>
+									<th>
+										Ghi chú
+									</th>
+									<th>
+										Thành tiền
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										Chè thái nguyên
+									</td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
+								</tr>
+								<tr>
+									<td>
+										Chè búp 1
+									</td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
+								</tr>
+								<tr>
+									<td>
+										Chè Lào Cai
+									</td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
+								</tr>
+							</tbody>
+							<tfoot class="tfoot-light">
+								<tr>
+									<td class="font-weight-bold">Tổng</td>
+									<td>900kg</td>
+									<td>15%</td>
+									<td>30kg</td>
+									<td>-</td>
+									<td>Chè bẩn, đất nhiều</td>
+									<td>60.000.000đ</td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+					<!-- order footer -->
+					<div class="order-footer">
+						<a class="btn btn-success" href="save_list_order.html">
+							Submit
+						</a>
+						<a
+							class="btn btn-success save-btn mx-2"
+							href="save_list_order.html"
+						>
+							Lưu
+						</a>
+						<a class="btn btn-danger cancel-btn" href="index.html">
+							Hủy
+						</a>
+					</div>
 				</div>
-			</div>
+			</main>
 		</section>
 		<!-- JS  Bootsrap -->
 		<script src="./js/test1.js"></script>
