--- a/order_payment.html
+++ b/order_payment.html
@@ -18,21 +18,25 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Trang chủ | Admin</title>
+		<title>Thanh toán đơn | Kế toán</title>
 	</head>
 	<body>
-		<!-- admin home page -->
-		<section id="home-page-admin" class="home-page">
+		<section id="pay-order" class="order home-page">
 			<aside class="left-content">
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link current" href="#">Danh sách khách hàng</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="list_type_tea.html"
-								>Danh sách loại chè</a
-							>
+						<li class="dropdown">
+							<a class="dropdown-toggle current" data-toggle="dropdown">
+								Danh sách giao dịch
+							</a>
+							<div class="dropdown-menu bg-navbar">
+								<a class="dropdown-item current" href="accountant_home.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="accountant_home_paid.html"
+									>Đã thanh toán</a
+								>
+							</div>
 						</li>
 						<li class="dropdown nav-link">
 							<a type="button" class="dropdown-toggle" data-toggle="dropdown"
@@ -43,7 +47,7 @@
 								<a class="dropdown-item" href="#">Đã thanh toán</a>
 							</div>
 						</li>
-						<li class="dropdown nav-link">
+						<li class="dropdown">
 							<a type="button" class="dropdown-toggle" data-toggle="dropdown">
 								Báo cáo
 							</a>
@@ -57,170 +61,145 @@
 					</ul>
 				</nav>
 			</aside>
-			<main class="right-content list-customer-content">
-				<!-- user info section -->
-				<div class="user-wrap">
-					<div class="user-info">
-						<a type="button" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fas fa-user-shield"></i> Admin</a
-						>
-						<div class="dropdown-menu">
-							<div>
-								<i class="fas fa-phone-alt"></i>
-								<span class="admin-phone-number"> 0946284647</span>
+			<main class="right-content">
+				<div class="container pt-4">
+					<!-- order header -->
+					<div class="order-header d-flex justify-content-between">
+						<div class="order-header-left">
+							<p class="btn btn-danger">
+								Mã đơn số : <span class="order-code">#f847574</span>
+							</p>
+							<div class="order-date pb-1">
+								Ngày : <span class="date-order">12/2/2020</span>
 							</div>
-							<div class="py-1">
-								Quản trị viên
+						</div>
+						<!-- info customer -->
+						<div class="order-header-right customer-info">
+							<div class="customer-name">Tên nông hộ : Trần Đại Nghĩa</div>
+							<div class="customer-phone-number py-2">
+								Số điện thoại: 0726828733
 							</div>
-							<a href="signin.html">Đăng xuất</a>
+							<div class="customer-address">Địa chỉ : Thôn A - Yên Bái</div>
 						</div>
 					</div>
-				</div>
-
-				<!-- table info section -->
-				<div class="container">
-					<div class="list-customer-header mt-4 d-flex">
-						<h3>Danh sách nông hộ</h3>
-						<input
-							type="text"
-							class="search-box search-box-list-customer"
-							id=""
-							placeholder="Tìm kiếm..."
-						/>
-					</div>
-					<div class="customer-table mt-3">
+					<!-- order body -->
+					<div class="create-order-body mt-3 bg-light">
 						<table class="table text-center">
-							<thead class="thead-light">
+							<thead>
 								<tr>
 									<th>
-										Nông hộ
+										Tên loại chè
 									</th>
 									<th>
-										Địa chỉ
+										Khối lượng
 									</th>
 									<th>
-										Số điện thoại
+										Khấu trừ(%)
 									</th>
 									<th>
-										Tổng khối lượng
+										Khấu trừ(kg)
+									</th>
+									<th>
+										Đơn giá
+									</th>
+									<th>
+										Ghi chú
 									</th>
 									<th>
 										Thành tiền
-									</th>
-									<th>
-										Chi tiết
 									</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>
-										Nông hộ A
+										Chè thái nguyên
 									</td>
-									<td>Thôn A</td>
-									<td>0837462632</td>
-									<td>4000 <span class="mass-digit">kg</span></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
 									<td>20.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										Nông hộ B
+										Chè búp 1
 									</td>
-									<td>Thôn B</td>
-									<td>0837462632</td>
-									<td>5000 <span class="mass-digit">kg</span></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
 									<td>20.000.000đ</td>
-									<td><a href="#">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										Nông hộ C
+										Chè Lào Cai
 									</td>
-									<td>Thôn C</td>
-									<td>0837462632</td>
-									<td>3000 <span class="mass-digit">kg</span></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
 									<td>20.000.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										Nông hộ D
-									</td>
-									<td>Thôn D</td>
-									<td>0837462632</td>
-									<td>3000 <span class="mass-digit">kg</span></td>
-									<td>30.000.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										Nông hộ E
-									</td>
-									<td>Thôn E</td>
-									<td>0837462632</td>
-									<td>3000 <span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										Nông hộ F
-									</td>
-									<td>Thôn F</td>
-									<td>0837462632</td>
-									<td>4000 <span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td><a href="#">View</a></td>
 								</tr>
 							</tbody>
+							<tfoot class="tfoot-light">
+								<tr>
+									<td class="font-weight-bold">Tổng</td>
+									<td>900kg</td>
+									<td>15%</td>
+									<td>30kg</td>
+									<td>-</td>
+									<td>Chè bẩn, đất nhiều</td>
+									<td>60.000.000đ</td>
+								</tr>
+							</tfoot>
 						</table>
 					</div>
-					<!-- add new customer section -->
-					<div class="add-new-customer">
+					<!-- order footer -->
+					<!-- payment section -->
+					<div class="pay-order mt-2">
 						<button
 							class="btn btn-primary"
 							data-toggle="modal"
-							data-target="#add-customer"
+							data-target="#order-payment"
 							type="button"
 						>
-							Thêm khách hàng
+							Thanh toán <i class="fas fa-plus"></i>
 						</button>
-						<!-- modal -->
-						<div class="modal" id="add-customer">
+						<div class="modal text-dark" id="order-payment">
 							<div class="modal-dialoge">
 								<div class="modal-content">
 									<div class="modal-header">
-										<h4 class="modal-title">Thêm mới khách hàng</h4>
-										<button type="button" data-dismiss="modal">&times;</button>
+										<h4 class="modal-title">Thanh toán đơn</h4>
+										<button type="button" data-dismiss="modal">
+											&times;
+										</button>
 									</div>
 									<div class="modal-body">
-										<form action="" class="form-group-add-customer">
+										<form action="">
 											<div class="form-group">
-												<input
-													type="text"
-													class="form-control"
-													placeholder="Tên nông hộ"
-												/>
+												Tồng giá trị đơn :
+												<span class="order-value">20.000.000đ</span>
 											</div>
 											<div class="form-group">
 												<input
 													type="text"
+													id="tea-mass"
 													class="form-control"
-													placeholder="Địa chỉ"
+													placeholder="Tiền thanh toán"
 												/>
 											</div>
 											<div class="form-group">
-												<input
-													type="text"
-													class="form-control"
-													placeholder="Số điện thoại"
-												/>
+												Còn nợ : <span class="order-loan">10.000.000</span>
 											</div>
+
 											<input
 												type="submit"
 												class="btn btn-success d-block m-auto"
-												value="Thêm"
+												value="Xác nhận thanh toán"
 											/>
 										</form>
 									</div>
@@ -241,6 +220,7 @@
 			</main>
 		</section>
 		<!-- JS  Bootsrap -->
+		<script src="./js/test1.js"></script>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
