--- a/accountant_home_paid.html
+++ b/accountant_home_paid.html
@@ -96,9 +96,6 @@
 							<thead class="thead-light">
 								<tr>
 									<th>
-										Mã đơn
-									</th>
-									<th>
 										Nông hộ
 									</th>
 									<th>
@@ -108,10 +105,10 @@
 										Tổng khối lượng
 									</th>
 									<th>
-										Tổng khấu trừ
+										Thành tiền
 									</th>
 									<th>
-										Đơn giá
+										Tổng nợ
 									</th>
 									<th>
 										Chi tiết
@@ -121,7 +118,7 @@
 							<tbody>
 								<tr>
 									<td>
-										#f448457
+										Nguyễn Mạnh Hùng
 									</td>
 									<td>Nguyễn Mạnh Hùng</td>
 									<td>Thôn A</td>
