--- a/change_order.html
+++ b/change_order.html
@@ -163,6 +163,9 @@
 										Khấu trừ(kg)
 									</th>
 									<th>
+										KL sau khấu trừ
+									</th>
+									<th>
 										Đơn giá
 									</th>
 									<th>
@@ -181,6 +184,7 @@
 									<td>300kg</td>
 									<td>5%</td>
 									<td>10kg</td>
+									<td>20kg</td>
 									<td>300.000đ</td>
 									<td>Đất, nước, sỏi</td>
 									<td>20.000.000đ</td>
@@ -191,6 +195,7 @@
 									</td>
 									<td>300kg</td>
 									<td>5%</td>
+									<td>10kg</td>
 									<td>10kg</td>
 									<td>300.000đ</td>
 									<td>Đất, nước, sỏi</td>
@@ -203,6 +208,7 @@
 									<td>300kg</td>
 									<td>5%</td>
 									<td>10kg</td>
+									<td>10kg</td>
 									<td>300.000đ</td>
 									<td>Đất, nước, sỏi</td>
 									<td>20.000.000đ</td>
@@ -212,8 +218,9 @@
 								<tr>
 									<td class="font-weight-bold">Tổng</td>
 									<td>900kg</td>
-									<td>15%</td>
+									<td>-</td>
 									<td>30kg</td>
+									<td>10kg</td>
 									<td>-</td>
 									<td>Chè bẩn, đất nhiều</td>
 									<td>60.000.000đ</td>
