--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</div>
 
 				<!-- table info section -->
-				<div class="container">
+				<div class="container mt-5">
 					<div class="list-customer-header mt-4 d-flex">
 						<h3>Danh sách nông hộ</h3>
 						<input
@@ -187,8 +187,8 @@
 							Thêm khách hàng
 						</button>
 						<!-- modal -->
-						<div class="modal" id="add-customer">
-							<div class="modal-dialoge">
+						<div class="modal fade" id="add-customer" role="dialog">
+							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
 										<h4 class="modal-title">Thêm mới khách hàng</h4>
