--- a/create_order.html
+++ b/create_order.html
@@ -26,15 +26,19 @@
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="list_order_customer.html">Danh sách khách hàng</a>
+							<a class="nav-link" href="list_order_customer.html"
+								>Danh sách khách hàng</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link current" href="save_list_order.html"
+							<a class="nav-link" href="save_list_order.html"
 								>Danh sách đơn đã lưu</a
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="submited_list_order.html">Danh sách đơn đã gửi</a>
+							<a class="nav-link" href="submited_list_order.html"
+								>Danh sách đơn đã gửi</a
+							>
 						</li>
 					</ul>
 				</nav>
@@ -46,7 +50,11 @@
 						<p class="btn btn-danger">
 							Mã đơn số : <span class="order-code">#f847574</span>
 						</p>
-						<div class="order-date">Ngày : <input type="date" /></div>
+
+						<div class="form-group form-inline">
+							Ngày : <input type="datetime-local" class="form-control ml-2" />
+						</div>
+
 						<div class="add-new-tea mt-2">
 							<button
 								class="btn btn-primary"
@@ -177,6 +185,9 @@
 									Khấu trừ(kg)
 								</th>
 								<th>
+									KL sau khấu trừ
+								</th>
+								<th>
 									Đơn giá
 								</th>
 								<th>
@@ -195,6 +206,7 @@
 								<td>300kg</td>
 								<td>5%</td>
 								<td>10kg</td>
+								<td>275kg</td>
 								<td>300.000đ</td>
 								<td>Đất, nước, sỏi</td>
 								<td>20.000.000đ</td>
@@ -203,9 +215,10 @@
 								<td>
 									Chè búp 1
 								</td>
-								<td>300kg</td>
+								<td>150kg</td>
 								<td>5%</td>
 								<td>10kg</td>
+								<td>130kg</td>
 								<td>300.000đ</td>
 								<td>Đất, nước, sỏi</td>
 								<td>20.000.000đ</td>
@@ -226,10 +239,11 @@
 							<tr>
 								<td class="font-weight-bold">Tổng</td>
 								<td>900kg</td>
-								<td>15%</td>
-								<td>30kg</td>
 								<td>-</td>
-								<td>Chè bẩn, đất nhiều</td>
+								<td>30kg</td>
+								<td>200kg</td>
+								<td>-</td>
+								<td>-</td>
 								<td>60.000.000đ</td>
 							</tr>
 						</tfoot>
