--- a/create_order.html
+++ b/create_order.html
@@ -45,17 +45,15 @@
 			</aside>
 			<main class="p-4 right-content">
 				<!-- order header -->
-				<div class="order-header d-flex justify-content-between">
-					<div class="order-header-left">
+				<div class="order-header d-flex">
+					<div class="order-header-left mr-3">
 						<p class="btn btn-danger">
 							Mã đơn số : <span class="order-code">#f847574</span>
 						</p>
-
-						<div class="form-group form-inline">
-							Ngày : <input type="datetime-local" class="form-control ml-2" />
+							<div class="form-group">
+							<input type="datetime-local" class="form-control" />
 						</div>
-
-						<div class="add-new-tea mt-2">
+						<div class="add-new-tea">
 							<button
 								class="btn btn-primary"
 								data-toggle="modal"
@@ -141,30 +139,28 @@
 							</div>
 						</div>
 					</div>
-					<div class="order-header-right customer-info">
-						<form action="" class="form-inline my-1">
-							<div class="form-group">
-								<input
-									type="text"
-									class="form-control"
-									placeholder="Tên nông hộ"
-								/>
-							</div>
-						</form>
-						<form action="" class="form-inline my-2">
-							<div class="form-group">
-								<input
-									type="text"
-									class="form-control"
-									placeholder="Số điện thoại"
-								/>
-							</div>
-						</form>
-						<form action="" class="form-inline my-1">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Địa chỉ" />
-							</div>
-						</form>
+					<div class="order-header-right customer-info ml-5">
+						<div class="form-group">
+							<input
+								type="text"
+								class="form-control"
+								placeholder="Tên nông hộ"
+							/>
+						</div>
+
+						<div class="form-group">
+							<input
+								type="text"
+								class="form-control"
+								placeholder="Số điện thoại"
+							/>
+						</div>
+
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Địa chỉ" />
+						</div>
+
+					
 					</div>
 				</div>
 				<!-- order body -->
@@ -230,6 +226,7 @@
 								<td>300kg</td>
 								<td>5%</td>
 								<td>10kg</td>
+								<td>280kg</td>
 								<td>300.000đ</td>
 								<td>Đất, nước, sỏi</td>
 								<td>20.000.000đ</td>
