--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/mobile.css" />
+		<link rel="stylesheet" href="./css/tablets.css" />
 		<title>Trang chủ | Admin</title>
 	</head>
 	<body>
@@ -48,10 +50,14 @@
 								Báo cáo
 							</a>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Báo cáo ngày</a>
-								<a class="dropdown-item" href="#">Báo cáo tuần</a>
-								<a class="dropdown-item" href="#">Báo cáo tháng</a>
-								<a class="dropdown-item" href="#">Báo cáo năm</a>
+								<a class="dropdown-item" href="report_day.html">Báo cáo ngày</a>
+								<a class="dropdown-item" href="report_week.html"
+									>Báo cáo tuần</a
+								>
+								<a class="dropdown-item" href="report_month.html"
+									>Báo cáo tháng</a
+								>
+								<a class="dropdown-item" href="report_year.html">Báo cáo năm</a>
 							</div>
 						</li>
 					</ul>
