--- a/order_payment.html
+++ b/order_payment.html
@@ -52,10 +52,14 @@
 								Báo cáo
 							</a>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Báo cáo ngày</a>
-								<a class="dropdown-item" href="#">Báo cáo tuần</a>
-								<a class="dropdown-item" href="#">Báo cáo tháng</a>
-								<a class="dropdown-item" href="#">Báo cáo năm</a>
+								<a class="dropdown-item" href="report_day.html">Báo cáo ngày</a>
+								<a class="dropdown-item" href="report_week.html"
+									>Báo cáo tuần</a
+								>
+								<a class="dropdown-item" href="report_month.html"
+									>Báo cáo tháng</a
+								>
+								<a class="dropdown-item" href="report_year.html">Báo cáo năm</a>
 							</div>
 						</li>
 					</ul>
@@ -167,7 +171,7 @@
 							data-target="#order-payment"
 							type="button"
 						>
-							Thanh toán 
+							Thanh toán
 						</button>
 						<div class="modal fade text-dark" id="order-payment" role="dialog">
 							<div class="modal-dialog">
@@ -186,12 +190,16 @@
 											</div>
 											<div class="form-group">
 												<label for="tea-paid-money">Tiền thanh toán : </label>
-												<input type="text" id="tea-paid-money" class="form-control" />
+												<input
+													type="text"
+													id="tea-paid-money"
+													class="form-control"
+												/>
 											</div>
 											<div class="form-group d-block">
 												Còn nợ : <span class="order-loan">10.000.000</span>
 											</div>
-											
+
 											<input
 												type="submit"
 												class="btn btn-success d-block m-auto"
