--- a/change_order.html
+++ b/change_order.html
@@ -18,6 +18,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/tablets.css">
 		<title>Chỉnh sửa đơn | Nhân viên thu mua</title>
 	</head>
 	<body>
