--- a/list_order_customer.html
+++ b/list_order_customer.html
@@ -96,7 +96,7 @@
 								<td>10.000kg</td>
 								<td>350.000.000đ</td>
 								<td class="dropdown">
-									<a class="text-info" href="#">
+									<a class="text-info" href="customer_details.html">
 										View
 									</a>
 								</td>
@@ -115,7 +115,7 @@
 								<td>21.000kg</td>
 								<td>200.000.000đ</td>
 								<td class="dropdown">
-									<a class="text-info" href="#">
+									<a class="text-info" href="customer_details.html">
 										View
 									</a>
 								</td>
@@ -134,7 +134,7 @@
 								<td>40.000kg</td>
 								<td>750.000.000đ</td>
 								<td class="dropdown">
-									<a class="text-info" href="#">
+									<a class="text-info" href="customer_details.html">
 										View
 									</a>
 								</td>
@@ -153,7 +153,7 @@
 								<td>22.000kg</td>
 								<td>250.000.000đ</td>
 								<td class="dropdown">
-									<a class="text-info" href="#">
+									<a class="text-info" href="customer_details.html">
 										View
 									</a>
 								</td>
@@ -172,7 +172,7 @@
 								<td>10.000kg</td>
 								<td>150.000.000đ</td>
 								<td class="dropdown">
-									<a class="text-info" href="#">
+									<a class="text-info" href="customer_details.html">
 										View
 									</a>
 								</td>
