--- a/order_paid.html
+++ b/order_paid.html
@@ -18,14 +18,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/tablets.css" />
-		<title>Danh sách chưa thanh toán | Kế toán</title>
+		<title>Đơn đã thanh toán | Kế toán</title>
 	</head>
 	<body>
-		<!-- nav-sidebar -->
-		<section id="home-page-accountant" class="home-page">
+		<section id="pay-order" class="order home-page">
 			<aside class="left-content">
-				<nav class="navbar bg-navbar">
+				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="dropdown">
 							<a class="dropdown-toggle current" data-toggle="dropdown">
@@ -45,12 +43,8 @@
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="loan_control_main.html"
-									>Chưa thanh toán</a
-								>
-								<a class="dropdown-item" href="loan_control_main.html"
-									>Đã thanh toán</a
-								>
+								<a class="dropdown-item" href="#">Chưa thanh toán</a>
+								<a class="dropdown-item" href="#">Đã thanh toán</a>
 							</div>
 						</li>
 						<li class="dropdown">
@@ -71,132 +65,120 @@
 					</ul>
 				</nav>
 			</aside>
-			<main class="right-content list-customer-content">
-				<!-- user info section -->
-				<div class="user-wrap">
-					<div class="user-info">
-						<a type="button" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fas fa-user"></i> Minh Ngọc</a
-						>
-						<div class="dropdown-menu">
-							<div>
-								<i class="fas fa-phone-alt"></i>
-								<span class="admin-phone-number"> 0946284647</span>
+			<main class="right-content">
+				<div class="container pt-4">
+					<!-- order header -->
+					<div class="order-header d-flex justify-content-between">
+						<div class="order-header-left">
+							<p class="btn btn-danger">
+								Mã đơn số : <span class="order-code">#f847574</span>
+							</p>
+							<div class="order-date pb-1">
+								Ngày : <span class="date-order">12/2/2020</span>
 							</div>
-							<div class="py-1">
-								Kế toán viên
+						</div>
+						<!-- info customer -->
+						<div class="order-header-right customer-info">
+							<div class="customer-name">Tên nông hộ : Trần Đại Nghĩa</div>
+							<div class="customer-phone-number py-2">
+								Số điện thoại: 0726828733
 							</div>
-							<a href="signin.html">Đăng xuất</a>
+							<div class="customer-address">Địa chỉ : Thôn A - Yên Bái</div>
 						</div>
 					</div>
-				</div>
-				<div class="container mt-5">
-					<h3 class="table-header py-2">
-						Danh sách đơn hàng chưa thanh toán
-						<span class="date-payment">12/4/2020</span>
-					</h3>
-					<!-- table info section -->
-					<div class="customer-table pt-3">
+					<!-- order body -->
+					<div class="create-order-body mt-3 bg-light">
 						<table class="table text-center">
-							<thead class="thead-light">
+							<thead>
 								<tr>
 									<th>
-										Mã đơn
+										Tên loại chè
 									</th>
 									<th>
-										Nông hộ
+										Khối lượng
 									</th>
 									<th>
-										Địa chỉ
+										Khấu trừ(%)
 									</th>
 									<th>
-										Tổng khối lượng
+										Khấu trừ(kg)
 									</th>
 									<th>
-										Khối lượng sau khấu trừ
+										Đơn giá
 									</th>
-									<th>Thành tiền</th>
 									<th>
-										Chi tiết
+										Ghi chú
+									</th>
+									<th>
+										Thành tiền
 									</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>
-										#f875438
+										Chè thái nguyên
 									</td>
-									<td>Trần Văn Tú</td>
-									<td>Thôn A</td>
-									<td>4000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="order_payment.html">View</a></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
 								</tr>
 								<tr>
 									<td>
-										#f448457
+										Chè búp 1
 									</td>
-									<td>Nguyễn Văn B</td>
-									<td>Thôn B</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
 								</tr>
 								<tr>
 									<td>
-										#f448457
+										Chè Lào Cai
 									</td>
-									<td>Nguyễn Văn B</td>
-									<td>Thôn B</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										#f448457
-									</td>
-									<td>Nguyễn Văn C</td>
-									<td>Thôn C</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										#f448457
-									</td>
-									<td>Nguyễn Văn E</td>
-									<td>Thôn E</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
+									<td>300kg</td>
+									<td>5%</td>
+									<td>10kg</td>
+									<td>300.000đ</td>
+									<td>Đất, nước, sỏi</td>
+									<td>20.000.000đ</td>
 								</tr>
 							</tbody>
-
 							<tfoot class="tfoot-light">
 								<tr>
 									<td class="font-weight-bold">Tổng</td>
+									<td>900kg</td>
+									<td>15%</td>
+									<td>30kg</td>
 									<td>-</td>
 									<td>-</td>
-									<td>12.000kg</td>
-									<td>12.000.000 kg</td>
-									<td>-</td>
-									<td>-</td>
+									<td>60.000.000đ</td>
 								</tr>
 							</tfoot>
 						</table>
 					</div>
-					<!-- add new customer section -->
+					<!-- order footer -->
+					<!-- payment status -->
+					<div class="d-flex payment-status justify-content-end">
+						<div>
+							<p class="text-medium text-success">
+								Đã thanh toán : <span class="paid-money">20.000.000 đ</span>
+							</p>
+							<p class="text-medium text-danger">
+								Còn nợ : <span class="loan-money">40.000.000 đ</span>
+							</p>
+						</div>
+					</div>
 				</div>
 			</main>
 		</section>
 		<!-- JS  Bootsrap -->
+		<script src="./js/test1.js"></script>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
