--- a/report_day.html
+++ b/report_day.html
@@ -18,16 +18,16 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Kiểm soát công nợ | Kế toán</title>
+		<title>Báo cáo ngày | Admin</title>
 	</head>
 	<body>
-		<!-- nav-sidebar -->
-		<section id="home-page-accountant" class="home-page">
+		<!-- admin home page -->
+		<section id="home-page-admin" class="home-page">
 			<aside class="left-content">
-				<nav class="navbar bg-navbar">
+				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Danh sách khách hàng</a>
+							<a class="nav-link" href="index.html">Danh sách khách hàng</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="list_type_tea.html"
@@ -36,18 +36,22 @@
 						</li>
 						<li class="dropdown nav-link">
 							<a
-								class="dropdown-toggle current"
+								class="dropdown-toggle"
 								data-toggle="dropdown"
 								href="loan_control_main.html"
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Chưa thanh toán</a>
-								<a class="dropdown-item" href="#">Đã thanh toán</a>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Đã thanh toán</a
+								>
 							</div>
 						</li>
 						<li class="dropdown nav-link ">
-							<a class="dropdown-toggle text-white" data-toggle="dropdown">
+							<a class="dropdown-toggle current" data-toggle="dropdown">
 								Báo cáo
 							</a>
 							<div class="dropdown-menu bg-navbar">
@@ -69,33 +73,39 @@
 				<div class="user-wrap">
 					<div class="user-info">
 						<a type="button" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fas fa-user"></i> Minh Ngọc</a
+							<i class="fas fa-user-shield"></i> Admin</a
 						>
 						<div class="dropdown-menu">
 							<div>
 								<i class="fas fa-phone-alt"></i>
-								<span class="accountant-phone-number"> 0946284647</span>
+								<span class="admin-phone-number"> 0946284647</span>
 							</div>
 							<div class="py-1">
-								Kế toán viên
+								Quản trị viên
 							</div>
 							<a href="signin.html">Đăng xuất</a>
 						</div>
 					</div>
 				</div>
+
+				<!-- table info section -->
 				<div class="container mt-5">
-					<h3 class="table-header py-2">
-						Danh sách đơn hàng đã thanh toán
-						<span class="date-payment">12/4/2020</span>
-					</h3>
-					<!-- table info section -->
-					<div class="customer-table pt-3">
+					<div class="list-customer-header mt-4 d-flex">
+						<h3>Báo cáo thống kê ngày 12/2/2020</h3>
+						<div class="form-group form-inline">
+							<label for="date" class="mr-2">Ngày số</label>
+							<input
+								type="datetime-local"
+								name=""
+								id="date"
+								class="form-control"
+							/>
+						</div>
+					</div>
+					<div class="customer-table mt-3">
 						<table class="table text-center">
 							<thead class="thead-light">
 								<tr>
-									<th>
-										Mã đơn
-									</th>
 									<th>
 										Nông hộ
 									</th>
@@ -103,13 +113,14 @@
 										Địa chỉ
 									</th>
 									<th>
-										Tổng khối lượng
+										Khối lượng sau khấu trừ
+									</th>
+
+									<th>
+										Tiền giao dịch
 									</th>
 									<th>
-										Tổng khấu trừ
-									</th>
-									<th>
-										Đơn giá
+										Dư nợ
 									</th>
 									<th>
 										Chi tiết
@@ -119,74 +130,65 @@
 							<tbody>
 								<tr>
 									<td>
-										#f448457
+										Nông hộ A
 									</td>
-									<td>Nguyễn Mạnh Hùng</td>
 									<td>Thôn A</td>
-									<td>4000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="order_payment.html">View</a></td>
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_day_detail.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f448457
+										Nông hộ B
 									</td>
-									<td>Nguyễn Văn B</td>
-									<td>Thôn B</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
+									<td>Thôn A</td>
+									<td>400 kg</td>
+
+									<td>200.000.000 đ</td>
+									<td>60.000.000 đ</td>
+									<td><a href="report_day_detail.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f448457
+										Nông hộ C
 									</td>
-									<td>Nguyễn Văn B</td>
-									<td>Thôn B</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
-								</tr>
-								<tr>
-									<td>
-										#f448457
-									</td>
-									<td>Nguyễn Văn C</td>
 									<td>Thôn C</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
+									<td>600 kg</td>
+
+									<td>400.000.000 đ</td>
+									<td>110.000.000 đ</td>
+									<td><a href="report_day_detail.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f448457
+										Nông hộ D
 									</td>
-									<td>Nguyễn Văn E</td>
-									<td>Thôn E</td>
-									<td>2000 <span class="mass-digit">kg</span></td>
-									<td>20kg</td>
-									<td>150.000đ</td>
-									<td><a href="#">View</a></td>
+									<td>Thôn D</td>
+									<td>700 kg</td>
+
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_day_detail.html">View</a></td>
 								</tr>
 							</tbody>
 							<tfoot class="tfoot-light">
 								<tr>
-									<td class="font-weight-bold">Tổng</td>
+									<td class="font-weight-bold">
+										Tổng
+									</td>
 									<td>-</td>
-									<td>-</td>
-									<td>12.000kg</td>
-									<td>120kg</td>
-									<td>-</td>
+									<td>2.500kg</td>
+									<td>500.000.000đ</td>
+									<td>300.000.000đ</td>
 									<td>-</td>
 								</tr>
 							</tfoot>
 						</table>
 					</div>
-					<!-- add new customer section -->
+					<div class="get-info">
+						<button class="btn btn-primary">Xuất ra excel</button>
+					</div>
 				</div>
 			</main>
 		</section>
