--- a/report_year.html
+++ b/report_year.html
@@ -18,16 +18,16 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Chi tiết khách hàng | Admin</title>
+		<title>Báo cáo năm | Admin</title>
 	</head>
 	<body>
-		<!-- nav-sidebar -->
+		<!-- admin home page -->
 		<section id="home-page-admin" class="home-page">
 			<aside class="left-content">
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link current" href="#">Danh sách khách hàng</a>
+							<a class="nav-link" href="index.html">Danh sách khách hàng</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="list_type_tea.html"
@@ -35,16 +35,23 @@
 							>
 						</li>
 						<li class="dropdown nav-link">
-							<a type="button" class="dropdown-toggle" data-toggle="dropdown"
+							<a
+								class="dropdown-toggle"
+								data-toggle="dropdown"
+								href="loan_control_main.html"
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Chưa thanh toán</a>
-								<a class="dropdown-item" href="#">Đã thanh toán</a>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Đã thanh toán</a
+								>
 							</div>
 						</li>
-						<li class="dropdown">
-							<a type="button" class="dropdown-toggle" data-toggle="dropdown">
+						<li class="dropdown nav-link ">
+							<a class="dropdown-toggle current" data-toggle="dropdown">
 								Báo cáo
 							</a>
 							<div class="dropdown-menu bg-navbar">
@@ -61,7 +68,7 @@
 					</ul>
 				</nav>
 			</aside>
-			<main class="right-content list-details-order-customer">
+			<main class="right-content list-customer-content">
 				<!-- user info section -->
 				<div class="user-wrap">
 					<div class="user-info">
@@ -80,39 +87,26 @@
 						</div>
 					</div>
 				</div>
-				<div class="container mt-5">
-					<div class="list-customer-order-details mt-4 d-flex">
-						<h3>
-							<span class="customer-name">Danh sách đơn - Nông hộ A </span>-
-							<span class="customer-address"> Thôn A</span>
-						</h3>
-
-						<div class="form-group">
-							<input
-								class="search-box search-box-list-order"
-								placeholder="Tìm kiếm..."
-							/>
-						</div>
+				<!-- table info section -->
+				<div class="container mt-1">
+					<div class="list-customer-header pt-3">
+						<h3>Báo cáo thống kê năm 2020</h3>
 					</div>
-					<!-- list order table -->
-					<div class="list-order-table mt-3">
+					<div class="customer-table mt-3">
 						<table class="table text-center">
 							<thead class="thead-light">
 								<tr>
 									<th>
-										Mã đơn
+										Tháng
 									</th>
 									<th>
-										Ngày giao dịch
+										Khối lượng sau khấu trừ
 									</th>
 									<th>
-										Khối lượng
+										Tiền giao dịch
 									</th>
 									<th>
-										Thành tiền
-									</th>
-									<th>
-										Còn nợ
+										Dư nợ
 									</th>
 									<th>
 										Chi tiết
@@ -122,76 +116,142 @@
 							<tbody>
 								<tr>
 									<td>
-										#f475834
+										1
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										2
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										3
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										4
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										5
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 								<tr>
 									<td>
-										#f753363
+										6
 									</td>
-									<td>3/9/2020</td>
-									<td>200<span class="mass-digit">kg</span></td>
-									<td>20.000.000đ</td>
-									<td class="text-danger">10.000.000đ</td>
-									<td><a href="customer_details.html">View</a></td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										7
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										8
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										9
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										10
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										11
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
+								</tr>
+								<tr>
+									<td>
+										12
+									</td>
+
+									<td>300 kg</td>
+									<td>100.000.000 đ</td>
+									<td>30.000.000 đ</td>
+									<td><a href="report_month.html">View</a></td>
 								</tr>
 							</tbody>
+
 							<tfoot class="tfoot-light">
 								<tr>
-									<td class="font-weight-bold">Tổng</td>
-									<td>-</td>
-									<td>500kg</td>
-									<td>120.000.000đ</td>
-									<td class="text-danger">60.000.000đ</td>
+									<td class="font-weight-bold">
+										Tổng
+									</td>
+
+									<td>2.500kg</td>
+									<td>500.000.000đ</td>
+									<td>300.000.000đ</td>
 									<td>-</td>
 								</tr>
 							</tfoot>
 						</table>
+					</div>
+					<div class="get-info">
+						<button class="btn btn-primary">Xuất ra excel</button>
 					</div>
 				</div>
 			</main>
