--- a/submited_list_order.html
+++ b/submited_list_order.html
@@ -29,13 +29,19 @@
 				<nav class="navbar bg-navbar ">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="list_order_customer.html">Danh sách khách hàng</a>
+							<a class="nav-link" href="list_order_customer.html"
+								>Danh sách khách hàng</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="save_list_order.html">Danh sách đơn đã lưu</a>
+							<a class="nav-link" href="save_list_order.html"
+								>Danh sách đơn đã lưu</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link current" href="submited_list_order.html">Danh sách đơn đã gửi</a>
+							<a class="nav-link current" href="submited_list_order.html"
+								>Danh sách đơn đã gửi</a
+							>
 						</li>
 					</ul>
 				</nav>
