--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
 								>Kiểm soát công nợ</a
 							>
 							<div class="dropdown-menu bg-navbar">
-								<a class="dropdown-item" href="#">Chưa thanh toán</a>
-								<a class="dropdown-item" href="#">Đã thanh toán</a>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Chưa thanh toán</a
+								>
+								<a class="dropdown-item" href="loan_control_main.html"
+									>Đã thanh toán</a
+								>
 							</div>
 						</li>
 						<li class="dropdown nav-link">
